# AMF

./: .gitignore  DESAFIOS_COMPLETADOS.md  FASE10A_COMPLETADA.md  FASE10B_COMPLETADA.md  FASE10C_COMPLETADA.md  FASE11A_COMPLETADA.md  FASE12A_COMPLETADA.md  FASE12B_COMPLETADA.md  FASE12C_COMPLETADA.md  FASE12D_COMPLETADA.md  FASE13.txt  FASE13B_COMPLETADA.md  FASE13C.txt  FASE13C_COMPLETADA.md  FASE13_COMPLETADA.md  FASE3_COMPLETADA.md  FASE4_COMPLETADA.md  FASE5_COMPLETADA.md  FASE5_NOTAS_FALLOS.md  FASE6_COMPLETADA.md  FASE6_NOTAS_FALLOS.md  FASE7_COMPLETADA.md  FASE7_NOTAS_FALLOS.md  FASE8_5_COMPLETADA.md  FASE8_COMPLETADA.md  FASE9_COMPLETADA.md  Investigacion.md  PHASE14_REMOTE_DATA_SYNC.md  README.md  download_phase6_data.py  fase 5.md  morphogenic_lab.py  phase10a_amf_world_model.py  phase10a_toy_simulator.py  phase10b_visual_codec.py  phase11a_cell_router_probe.py  phase11a_confidence_selector_probe.py  phase11a_frontier_slot_warp_probe.py  phase11a_iou_ranker_probe.py  phase11a_kinematic_encoder_probe.py  (+72 more)
NEVER/: CHANGELOG.md  CMakeLists.txt  README.md  architecture.md  roadmap.md
NEVER/scripts/: extract_events.py  phase10c_never_amf_orchestrator.py  quantize_and_export.py  test_transition_12ms.py  train_dynamic_snn.py  train_static_inr.py
NEVER/src/: inference_core.cu  main.cu
NEVER/src/core/: dual_anchor.cuh  inr_base.cuh  spike_accumulator.cuh
NEVER/src/engine/: action_orchestrator.hpp  ambient_audio_ssm.cuh  amf_vector_decoder.cuh  amf_world_model.cuh  delta_occlusion.cuh  inr_upscaler.cuh  output_handler.cuh  scene_director.cuh  snn_engine.cuh  (+1 more)
(+146 files in other folders)
